# dbo

./: .bumpversion.cfg  README.md  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
docs/: index.html
docs/0000001/: index.html
docs/0000002/: index.html
docs/0000003/: index.html
docs/0000004/: index.html
docs/0000005/: index.html
docs/0000006/: index.html
docs/0000007/: index.html
docs/0000008/: index.html
docs/0000009/: index.html
docs/0000010/: index.html
docs/0000011/: index.html
docs/0000012/: index.html
docs/0000013/: index.html
docs/0000014/: index.html
docs/0000015/: index.html
docs/0000016/: index.html
docs/0000017/: index.html
docs/0000018/: index.html
docs/0000019/: index.html
docs/0000020/: index.html
docs/0000021/: index.html
docs/0000022/: index.html
docs/0000023/: index.html
docs/0000024/: index.html
docs/0000025/: index.html
docs/0000026/: index.html
docs/0000027/: index.html
docs/0000028/: index.html
docs/0000029/: index.html
docs/0000030/: index.html
docs/0000031/: index.html
docs/0000032/: index.html
docs/0000033/: index.html
docs/0000034/: index.html
docs/0000035/: index.html
docs/0000036/: index.html
docs/0000037/: index.html
docs/0000038/: index.html
docs/0000039/: index.html
docs/0000040/: index.html
docs/0000041/: index.html
docs/0000042/: index.html
docs/0000043/: index.html
docs/0000044/: index.html
docs/0000045/: index.html
docs/0000046/: index.html
docs/0000047/: index.html
docs/0000048/: index.html
docs/0000049/: index.html
docs/0000050/: index.html
docs/source/: conf.py
releases/0.0.1/: debio.json  debio.obo  debio.owl
releases/0.1.1/: debio.json  debio.obo  debio.owl
releases/current/: debio.json  debio.obo  debio.owl
src/debio/: api.py  cli.py  version.py
src/debio/resources/: __init__.py  properties.json  typedefs.json
tests/: test_integrity.py
