##########################
# Setup.py Configuration #
##########################
[metadata]
name = debio
version = 0.1.2-dev
description = A community-curated, decentralized biomedical ontology.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/biopragmatics/debio
download_url = https://github.com/biopragmatics/debio/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/debio/issues
    Source Code = https://github.com/biopragmatics/debio

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files = 
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    ontology
    biocuration
    biosemantics
    semantic web
    systems biology
    bioinformatics
    cheminformatics
    chemoinformatics
    knowledge graphs

[options]
install_requires =
    pyobo>=0.8.3

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
export =
    jinja2
    bioontologies
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx_automodapi


[options.entry_points]
console_scripts =
    debio = debio.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = debio
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/debio
    .tox/*/lib/python*/site-packages/debio

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    S403
    S404
    S603
    # Line break before binary operator (flake8 is wrong)
    W503
    # whitespace before ':'
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    debio
    tests
